--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,7 +160,7 @@ ul {
 /* ===== HEADER ===== */
 .header {
   position: fixed;
-  top: 0;
+  top: 5%;
   left: 0;
   width: 100%;
   z-index: 1000;
