--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -327,7 +327,7 @@ ul {
 
 .hero__subtitle {
   font-size: 1.5rem;
-  color: var(--muted);
+  color: white;
   margin-bottom: 3rem;
   line-height: 1.5;
 }
